# Fast-api

./: .gitignore  pyproject.toml
api/: auth.py  db.py  main.py  post.py  schemas.py  token.py  user.py
